<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".view.activity.DetailActivity">

        <ProgressBar
            android:id="@+id/detail_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/background"
                        android:scaleType="fitXY"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detail_avatar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@color/background"
                        android:layout_gravity="center"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/name_user"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/detail_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/uuusername"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="4dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="4"
                            android:src="@drawable/ic_public_black_24dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="50dp"
                            />

                        <TextView
                            android:id="@+id/detail_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/url_html"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            android:layout_weight="1"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="4"
                            android:src="@drawable/ic_room_black_24dp"
                            android:layout_marginStart="50dp"/>

                        <TextView
                            android:id="@+id/detail_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/url_html"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    app:tabTextColor="@android:color/white"/>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="350dp" >

                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/faf_border" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
